starting to fix problem with overflowing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  background-color: black;
-}
-
 .markdown {
   @apply font-robotoSlab;
 }
